# tokentank

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: MACOS_SETUP.md
scripts/: icon.html  make_icon.md  make_icon.py
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  icon.rs  main.rs  parser.rs  state.rs
src-tauri/windows/: hooks.nsh
