[package]
name = "tokentank"
version = "0.3.0"
description = "TokenTank - the fuel gauge for your AI tools. Remaining usage and reset countdowns in your tray. Local only, nothing uploaded."
authors = ["Lucas Powell"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"

[profile.release]
strip = true
lto = true
codegen-units = 1
